--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    implementation 'io.appium:java-client:9.0.0'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.14.1'
+//    implementation 'org.seleniumhq.selenium:selenium-java:4.14.1'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.0.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter:2.3.0.RELEASE'
     implementation 'com.lmax:disruptor:3.4.0'
